# portable_terminal

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  M5_IDF6_PATCHES.md  Makefile  Makefile.local.example  PLAN.md  README.ja.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.local.example
.github/workflows/: pages.yml  release.yml
c6_updater/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  updater.sh
c6_updater/main/: CMakeLists.txt  idf_component.yml  main.c
c6_updater/main/slave_fw/: .gitignore
components/ble_config_service/: CMakeLists.txt  Kconfig.projbuild
components/ble_config_service/include/ble_config/: ble_config.hpp  crypto.hpp
components/ble_config_service/src/: ble_config.cpp  crypto.cpp  gatt_service.cpp  gatt_service.hpp
components/libssh2/: CMakeLists.txt  libssh2_config.h
components/tailscale/: CMakeLists.txt  Kconfig  idf_component.yml
components/tailscale/include/: tailscale_esp32.h
components/tailscale/src/: tailscale_control.c  tailscale_control.h  tailscale_derp.c  tailscale_derp.h  tailscale_disco.c  tailscale_disco.h  tailscale_esp32.c  tailscale_jstream.c  tailscale_jstream.h  tailscale_keys.c  tailscale_keys.h  tailscale_nacl.c  tailscale_nacl.h  tailscale_netmap.c  tailscale_netmap.h  tailscale_noise.c  tailscale_noise.h  tailscale_pubip.c  tailscale_pubip.h
components/term_core/: CMakeLists.txt
components/term_core/include/term_core/: cell.hpp  color.hpp  east_asian_width.hpp  error.hpp  idisplay.hpp  ifont.hpp  parser.hpp  screen.hpp  terminal.hpp
components/term_core/src/: parser.cpp  screen.cpp  terminal.cpp
components/usb_host_ftdi_sio/: idf_component.yml
components/wireguard/: CMakeLists.txt  Kconfig
components/wireguard/include/: wireguard_esp32.h
components/wireguard/src/: wireguard-platform.c  wireguard-platform.h  wireguard.c  wireguard_esp32.c  wireguardif.c
docs/: BLE_CONFIG_DESIGN.md  C6_FW_UPDATE.md  TAILSCALE_PORTING_NOTES.md  index.html  settings.html
host_test/: CMakeLists.txt
host_test/fakes/: ascii_renderer.hpp  fake_display.hpp
host_test/tests/: alt_screen_test.cpp  csi_extensions_test.cpp  parser_test.cpp  screen_test.cpp  terminal_golden_test.cpp  wide_char_test.cpp
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  boot_progress.cpp  boot_progress.hpp  byte_input.hpp  c6_fw_update.cpp  c6_fw_update.hpp  connection.cpp  connection.hpp  cooked_input.cpp  cooked_input.hpp  cursor_renderer.cpp  cursor_renderer.hpp  display_m5gfx.cpp  display_m5gfx.hpp  hid_translate.cpp  hid_translate.hpp  idf_component.yml  input_tab5_kbd.cpp  input_tab5_kbd.hpp  input_touch.cpp  input_touch.hpp  input_uart.cpp  input_uart.hpp  input_usb_hid.cpp  input_usb_hid.hpp  input_usb_jtag.cpp  input_usb_jtag.hpp  menu.cpp  menu.hpp  profiles.cpp  profiles.hpp  reconnect.cpp  reconnect.hpp  soft_keyboard.cpp  soft_keyboard.hpp  ssh_client.cpp  ssh_client.hpp  ssh_connection.cpp  (+19 more)
script/: pack_firmware.py
slave_c6_fw/: README.md  build.sh  flash.sh
